# CrupyDSL

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: sanitize.yaml
Crupy/crupy/core/: exception.py
Crupy/crupy/core/grammar/: __init__.py  base.py  exception.py
Crupy/crupy/core/stream/: __init__.py  exception.py  stream.py
CrupyDSL/crupydsl/: __init__.py  exception.py  py.typed
CrupyDSL/crupydsl/_utils/: __init__.py  abstractclass.py  dataclass.py  namedclass.py  traceback.py  typing.py
CrupyDSL/crupydsl/grammar/: __init__.py  base.py  exception.py
CrupyDSL/crupydsl/parser/: __init__.py  base.py  exception.py  node.py
CrupyDSL/examples/crupycsv/: __main__.py  _grammar.py
CrupyDSL/examples/crupyjson/: __main__.py  _grammar.py
CrupyDSL/scripts/: precommit_checks.sh
CrupyDSL/tests/: node.py  stream.py
CrupyDSL/tests/dsl/: prod_alternative.py  prod_between.py  prod_builtin.py  prod_dsl.py  prod_eol.py  prod_error.py  prod_group.py  prod_production.py  prod_production_name.py  prod_space.py  prod_statement.py  prod_string.py
CrupyDSL/tests/lexer/: assert_lookahead.py  op_between.py  op_builtin.py  op_error.py  op_optional.py  op_or.py  op_production.py  op_rep.py  op_seq.py  op_text.py
CrupyDSL/tests/utils/: crupyabstractclass.py  crupydataclass.py  crupynamedclass.py
CrupyDSLParser/crupydslparser/: __init__.py  __main__.py  exception.py  py.typed
CrupyDSLParser/crupydslparser/_utils/: __init__.py  abstractclass.py  dataclass.py  namedclass.py  typing.py
CrupyDSLParser/crupydslparser/cli/: __init__.py  unittest.py
CrupyDSLParser/crupydslparser/core/: __init__.py  exception.py
CrupyDSLParser/crupydslparser/grammar/: __init__.py  base.py  exception.py
CrupyDSLParser/crupydslparser/parser/: __init__.py  base.py  exception.py  node.py
CrupyDSLParser/crupydsltester/: __main__.py
CrupyDSLParser/crupydsltester/cli/: __init__.py  unittest.py
CrupyDSLParser/crupydsltester/tests/: node.py  stream.py
CrupyDSLParser/crupydsltester/unittest/: __init__.py  base.py  exception.py
CrupyDSLParser/examples/: csv_grammar.py  json_grammar.py
CrupyDSLParser/examples/crupycsv/: __init__.py  _grammar.py
CrupyDSLParser/examples/crupyjson/: __init__.py  __main__.py  _grammar.py
CrupyDSLParser/scripts/: precommit_checks.sh
CrupyDSLParser/tests/: __init__.py  node.py  stream.py
CrupyDSLParser/tests/dsl/: alternative.py  builtin.py  dsl.py  dsl_production_name.py  group.py  prod_alternative.py  prod_between.py  prod_eol.py  prod_error.py  prod_production_name.py  prod_space.py  production.py  production_name.py  space.py  statement.py  string_fix.py
CrupyDSLParser/tests/lexer/: assert_eof.py  assert_lookahead.py  op_between.py  op_builtin.py  op_error.py  op_optional.py  op_or.py  op_production.py  op_rep.py  op_seq.py  op_string.py  op_text.py  op_until.py
CrupyDSLParser/tests/utils/: crupyabstractclass.py  crupydataclass.py  crupynamedclass.py
(+281 files in other folders)
