[tool.poetry]
name        = "crupydslparser"
version     = "0.0.0"
description = "Crupy DSL parser"
readme      = "README.md"
authors     = [
    "Yann MAGNIN <yann.magnin@protonmail.com>",
]
packages    = [
    { include = "crupydslparser", from='CrupyDSLParser/' },
    { include = "crupycsv",       from='CrupyDSLParser/examples/' },
    { include = "crupyjson",      from='CrupyDSLParser/examples/' },
]


[tool.poetry.scripts]
crupydsl    = 'crupydslparser.cli:crupydslparser_cli_entry'
crupycsv    = 'crupycsv.cli:crupycsv_cli_entry'
crupyjson   = 'crupyjson.cli:crupyjson_cli_entry'


[tool.poetry.dependencies]
python  = "3.11.*"
click   = "8.1.*"

[tool.poetry.dev-dependencies]
pynvim  = "*"
pylint  = "*"
mypy    = "*"
