[tool.poetry]
name        = 'crupydsl'
version     = '0.0.5'
description = 'Crupy DSL'
readme      = 'README.md'
authors     = [
    'Yann MAGNIN <yann.magnin@protonmail.com>',
]
packages    = [
    { include = 'crupydsl',     from='CrupyDSL/' },
    { include = 'crupycsv',     from='CrupyDSL/examples/' },
    { include = 'crupyjson',    from='CrupyDSL/examples/' },
]

## custom scripts for a more friendly usable example
## (todo) : optional scripts

[tool.poetry.scripts]
crupycsv        = 'crupycsv.cli:crupycsv_cli_entry'
crupyjson       = 'crupyjson.cli:crupyjson_cli_entry'

## dependencies declaration

[tool.poetry.dependencies]
python  = '>=3.9'
click   = '8.*'

[tool.poetry.dev-dependencies]
pynvim          = '*'
pylint          = '*'
mypy            = '*'
pyimportcheck   = '*'
pytest          = '*'
pre-commit      = "4.*"

## pytests configuration

[tool.pytest.ini_options]
log_level           = 'INFO'
python_functions    = [
    'test_*',
]
python_files        = '*.py'
testpaths           = [
    'CrupyDSL/tests',
]
